--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -45,5 +45,6 @@
         <activity
             android:name=".Contador"
             android:theme="@style/AppThemeNoSwipeToDismiss" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
 </manifest>
